# geniac-template

./: .gitmodules  CHANGELOG  README.md  main.nf  nextflow.config
conf/: base.config  geniac.config  process.config  test.config
docs/: geniac.md  usage.md
modules/fromSource/: CMakeLists.txt
